@@ -665,6 +665,7 @@
 50) kernel: net: allow enable/disable XPS/RPS configure.<br>
 51) kernel: net: neigh: don't require dst in neigh_hh_init.<br>
 52) kernel: net: neigh: don't require a dst in neigh_resolve_output.<br>
+53) kernel: net: udp: only allow UFO for packets from SOCK_DGRAM sockets.<br>
 <br>
 <br>
 <b>TODO:</b><br>
